--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -17,7 +17,7 @@ const {
 } = Astro.props;
 
 const base =
-  "px-4 py-2 rounded-md transition text-grey-900 transform hover:-translate-y-0.5 duration-200 dark:hover:text-gray-800";
+  "px-4 py-2 rounded-lg transition text-grey-900  font-semibold transform hover:-translate-y-0.5 duration-200 dark:hover:text-gray-800";
 
 const variants: Record<string, string> = {
   default:
