--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -27,7 +27,7 @@ const link = `/projects/${projet.slug}/`;
 
 // Fonction helper pour trouver les icônes dans /public
 function techIcon(name: string) {
-  return `/icons/${name.toLowerCase()}.png`; // par ex: /public/icons/astro.png
+  return `/icons/${name.toLowerCase()}.webp`; // par ex: /public/icons/astro.png
 }
 
 ---
@@ -69,7 +69,7 @@ function techIcon(name: string) {
     </p>
 
    <!-- Tech stack -->
-    <div class="flex flex-wrap items-center gap-3 mt-2">
+    <div class="flex flex-wrap items-center justify-center gap-3 mt-2">
       {projet.techs.map((tech) => (
         <Image
           src={techIcon(tech)}
