--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -150,12 +150,12 @@ section {
 }
 
 .section {
-  @apply py-16 px-6 md:px-12;
+  @apply py-16 px-6 md:px-12 flex flex-col gap-8;
  
 }
 
 .container {
-  @apply max-w-6xl mx-auto;
+  @apply max-w-6xl mx-auto justify-items-center;
 }
   
   a[class*="bg-"],
